<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">自定义样式日历</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="_7">日</string>
    <string name="_1">一</string>
    <string name="_2">二</string>
    <string name="_3">三</string>
    <string name="_4">四</string>
    <string name="_5">五</string>
    <string name="_6">六</string>

</resources>
