<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_order"
    android:orientation="vertical" >

    <include layout="@layout/layout_header" />

    <RelativeLayout
        android:id="@+id/order_top"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/top_bar_height" >

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@color/white"
                android:contentDescription="@string/app_name" />

            <TextView
                android:id="@+id/order_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text=""
                android:textSize="@dimen/txt_title" />
        </FrameLayout>

        <ImageView
            android:id="@+id/order_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/button_last" />

        <ImageView
            android:id="@+id/order_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            android:paddingBottom="15dp"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="15dp"
            android:src="@drawable/button_nest" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_7" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_1" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_2" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_3" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_4" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_5" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/_6" />
    </LinearLayout>

    <com.example.calendargridview.ScrollViewWidget
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:id="@+id/order_touch"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <com.example.calendargridview.MyGridView
                android:id="@+id/order_gridview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:gravity="top"
                android:horizontalSpacing="2dp"
                android:listSelector="#00000000"
                android:numColumns="7"
                android:scrollbars="none"
                android:stretchMode="columnWidth"
                android:verticalSpacing="2dp" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/white" >

                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:padding="5dp"
                    android:text=""
                    android:textColor="@color/black_color" />

                <TextView
                    android:id="@+id/tv_order"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:padding="20dp"
                    android:text=""
                    android:textColor="@color/black_color" />
            </RelativeLayout>
        </LinearLayout>
    </com.example.calendargridview.ScrollViewWidget>

</LinearLayout>